# cmake_test_directory

./: CMakeLists.txt  README.md
cmake/: UtilFunction.cmake
codes/: CMakeLists.txt
codes/a/: a.cpp  a.h
codes/a/a1/a11/include/: a11.h
codes/a/a1/a11/src/: a11.cpp
codes/a/a2/: a2.cpp  a2.h
codes/b/include/: b.h
codes/b/src/: b.cpp
codes/c/: main.cpp
